--- a/mychart/values.yaml
+++ b/mychart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 3
 
 image:
-  repository: nginx
+  repository: sergeytemkin/
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "alpine"
